logs/toxtweet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/FK.py'...
***   File "./lib/python3.5/site-packages/FK.py", line 27
    print grade_level
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/classifying.py'...
***   File "./lib/python3.5/site-packages/classifying.py", line 38
    print classifier.classify(extract_features(tweet.split()))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crawler.py'...
***   File "./lib/python3.5/site-packages/crawler.py", line 8
    print 'Drug :::::::::: Lexical Diversity'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/languageclassifier.py'...
***   File "./lib/python3.5/site-packages/languageclassifier.py", line 50
    print "Nothing to load here!"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/loadTweets.py'...
***   File "./lib/python3.5/site-packages/loadTweets.py", line 16
    print tweets
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/main.py'...
***   File "./lib/python3.5/site-packages/main.py", line 15
    print 'Querying Twitter for ',drug,' and writing the results to an XLS file.'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medgraph.py'...
***   File "./lib/python3.5/site-packages/medgraph.py", line 9
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parser.py'...
***   File "./lib/python3.5/site-packages/parser.py", line 11
    print sys.argv
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Compiling './lib/python3.5/site-packages/readabilitytests.py'...
***   File "./lib/python3.5/site-packages/readabilitytests.py", line 163
    print "=" * 100
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/textanalyzer.py'...
***   File "./lib/python3.5/site-packages/textanalyzer.py", line 26
    print ' Language: ' + self.lang
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/toxtweet-0.10.egg-info'...
Compiling './lib/python3.5/site-packages/twitterQuery.py'...
***   File "./lib/python3.5/site-packages/twitterQuery.py", line 38
    except BadStatusLine,e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/urlextracter.py'...
***   File "./lib/python3.5/site-packages/urlextracter.py", line 24
    print "Could not connect, or the markup has (too) bad structure"
                                                                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
